Add calculator frontend + styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,34 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="calculator-header">
+            <span class="display">1932719031</span>
+        </div>
+        <div class="calculator-buttons">
+            <div class="calculator-numbers">
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+                <button>,</button>
+                <button>0</button>
+                <button>C</button>
+            </div>
+            <div class="calculator-operators">
+                <button>+</button>
+                <button>-</button>
+                <button>x</button>
+                <button>/</button>
+                <button>=</button>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
