Add functionality to buttons, make the display responsive

--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
 <body>
     <div class="container">
         <div class="calculator-header">
-            <span class="display">1932719031</span>
+            <span class="display"></span>
         </div>
         <div class="calculator-buttons">
             <div class="calculator-numbers">
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button>,</button>
-                <button>0</button>
-                <button>C</button>
+                <button class="btn-number">1</button>
+                <button class="btn-number">2</button>
+                <button class="btn-number">3</button>
+                <button class="btn-number">4</button>
+                <button class="btn-number">5</button>
+                <button class="btn-number">6</button>
+                <button class="btn-number">7</button>
+                <button class="btn-number">8</button>
+                <button class="btn-number">9</button>
+                <button class="btn-number">.</button>
+                <button class="btn-number">0</button>
+                <button class="btn-clear">C</button>
             </div>
             <div class="calculator-operators">
-                <button>+</button>
-                <button>-</button>
-                <button>x</button>
-                <button>/</button>
-                <button>=</button>
+                <button class="btn-operator" id="btn-add">+</button>
+                <button class="btn-operator" id="btn-subtract">-</button>
+                <button class="btn-operator" id="btn-multiply">x</button>
+                <button class="btn-operator" id="btn-divide">/</button>
+                <button class="btn-operator" id="btn-equals">=</button>
             </div>
         </div>
     </div>
